Add CI workflow and fix Java 17 compatibility issues
Co-authored-by: Kai71584 <157053894+Kai71584@users.noreply.github.com>